# SentinelWall

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  security.yml
configs/: sentinelwall.toml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: client.rs  main.rs  output.rs
crates/sentinel-cli/src/commands/: allow.rs  analyze.rs  ban.rs  deny.rs  export.rs  flush.rs  import.rs  list.rs  login.rs  lookup.rs  mod.rs  monitor.rs  profile.rs  reload.rs  remove.rs  status.rs  threat_feed.rs  token.rs  user.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: lib.rs
crates/sentinel-core/src/config/: mod.rs  types.rs
crates/sentinel-core/src/detection/: analyzer.rs  anomaly.rs  brute_force.rs  flood.rs  mod.rs  port_scan.rs
crates/sentinel-core/src/engine/: firewall.rs  mod.rs  zones.rs
crates/sentinel-core/src/events/: mod.rs
crates/sentinel-core/src/geo/: mod.rs
crates/sentinel-core/src/metrics/: mod.rs
crates/sentinel-core/src/nftables/: builder.rs  executor.rs  mod.rs  tables.rs
crates/sentinel-core/src/response/: mod.rs
crates/sentinel-core/src/rules/: engine.rs  mod.rs  profiles.rs  types.rs  validator.rs
crates/sentinel-core/src/store/: mod.rs
crates/sentinel-core/src/threat/: mod.rs
crates/sentinel-daemon/: Cargo.toml
crates/sentinel-daemon/src/: auth.rs  cluster.rs  daemon.rs  main.rs
crates/sentinel-daemon/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  types.rs  websocket.rs
crates/sentinel-tui/: Cargo.toml
crates/sentinel-tui/src/: app.rs  fetch.rs  main.rs  state.rs  ui.rs
deploy/docker/: Dockerfile.daemon  Dockerfile.ml  Dockerfile.web  docker-compose.yml  nginx.conf  prometheus.yml
deploy/docker/grafana/provisioning/dashboards/: dashboards.yaml
deploy/kubernetes/: daemon-daemonset.yaml  monitoring.yaml  namespace.yaml  web-deployment.yaml
deploy/systemd/: sentinel-ml.service  sentineld.service
docs/: api.md  configuration.md
scripts/: generate-docs.sh  install.sh  uninstall.sh
sentinel-ml/: pyproject.toml
sentinel-ml/src/sentinel_ml/: __init__.py  anomaly.py  api.py  classifier.py  main.py  models.py  scoring.py
sentinel-web/: index.html  package.json  tailwind.config.js  vite.config.ts
sentinel-web/src/: App.tsx  index.css  main.tsx
sentinel-web/src/api/: client.ts
sentinel-web/src/components/: Layout.tsx
sentinel-web/src/hooks/: useWebSocket.ts
sentinel-web/src/pages/: Analytics.tsx  Bans.tsx  Dashboard.tsx  Login.tsx  Profiles.tsx  Rules.tsx  Settings.tsx  Threats.tsx  Users.tsx
sentinel-web/src/store/: auth.ts
