[workspace]
resolver = "2"
members = [
    "crates/sentinel-core",
    "crates/sentinel-daemon",
    "crates/sentinel-cli",
    "crates/sentinel-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SentinelWall Contributors"]
license = "MIT"
repository = "https://github.com/sinazarezadeh/SentinelWall"
homepage = "https://github.com/sinazarezadeh/SentinelWall"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "auth", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "color", "env", "unicode", "wrap_help"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# TUI
ratatui = "0.26"
crossterm = "0.27"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Concurrent data structures
dashmap = "5"
parking_lot = "0.12"

# IP / Network
ipnet = { version = "2", features = ["serde"] }
maxminddb = "0.23"

# Process management
nix = { version = "0.27", features = ["process", "signal"] }

# Config
config = { version = "0.14", features = ["toml"] }

# Regex
regex = "1"

# Channels
flume = "0.11"

# Crypto
sha2 = "0.10"
hex = "0.4"

# gRPC
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"
