[package]
name = "sentinel-cli"
description = "SentinelWall CLI — sentinel command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
ipnet.workspace = true
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.15"
