[package]
name = "sentinel-core"
description = "Core firewall engine, rule management, threat detection, and observability for SentinelWall"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
ipnet.workspace = true
regex.workspace = true
flume.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
prometheus.workspace = true
config.workspace = true
rand.workspace = true
sqlx.workspace = true
maxminddb = { workspace = true, optional = true }

[features]
default = ["geo"]
geo = ["maxminddb"]
full = ["geo"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
