[package]
name = "sentinel-tui"
description = "SentinelWall TUI — ncurses-like terminal dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinel-tui"
path = "src/main.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
